--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -1,4 +1,20 @@
 {% extends "home.html" %}
 {% block abc %}
-love is ******............
-{% endblock abc %}
+<form action="/savethisdata" method="post">
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">title todo</label>
+   <div class="mb-3">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"placeholder="enter your todo">
+      
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">message</label>
+      <input type="text" class="form-control" id="exampleInputPassword1"name="msg"placeholder="enter your message">
+    </div>
+    <div style="text-align: center;">
+    <button type="submit" class="btn btn-primary">add todo</button>
+    </div>
+    <form>
+    
+ 
+    {% endblock abc %}
